fixed Java version issues